@@ -56,10 +56,8 @@ $ sudo cp bin/wrcli /usr/local/bin
 TODO
 ----
 
-- local caching of results 
 - improve installation (e.g. distribute a binary package)
 - filtering translations by category 
-- print terms of service: http://www.wordreference.com/docs/api.aspx#service
 - http://api.wordreference.com/0.8/enit/json/enit/ <-- handle missing word
 {
 	"Note" : "Please enter a word to search for. For example, http://api.wordreference.com/json/enfr/start."
