@@ -1,3 +1,7 @@
+23 Oct 2011
+  - print copyright and terms of service
+  - print link back to wordreference.com
+
 14 Aug 2011
   - version 1.1
   - 2x speedup by using gzip encoding
